cargo-features = ["edition2021"]

[package]
name = "functions"
version = "0.1.0"
authors = ["jp@bultmann.eu"]
edition = "2021"

[lib]
name = "functions_lib"
path = "src/rust/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }